  ValueMap now extends ValueProvider and ValueListProvider
  ValueMap and associates moved to common.model.valuemap
  Entity overrides getValues(), returns values from pk and fk as well
  AbstractEntityPropertyLink renamed to AbstractValueMapLink and moved to common.ui.valuemap
  Descendants of above moved if possible
  ValidationException and descendantd moved to common.ui.valuemap.exception
  Renamed classes/methods in common.ui.control
  EntityPanel added overloaded initializeEditPanel() and initializeTablePanel() methods, finalized the overridden ones
  EntityEditModel.validate() overloaded, finalized the overridden one
  EntityTablePanel.isRowColoring() added
  EntityEditModel.getDefaultValueMap() finalized, getDefaultEntity() added
  Minor javadoc improvements in common.model.valuemap and common.ui.valuemap
  Property now inherits updatable, readOnly and nullable from its parent property
  Type removed, replaced with Class
  Entity.Key singleIntegerKey field added
  Entity.setValue(Property, Object) added
  ValueMap.setValue() overloaded with initialization parameter
  Property.propertyType renamed to valueClass
  Entity.class references changed to ValueMap.class
  Entity.setValue() now accepts values for Property.DenormalizedProperty
  ValueMap.isNull(value) added
  ValueMap.setValue() unoverloaded, initialize parameter removed (for now)
  Null value checking simplified
  Property initializes a default format for time and numerical properties
  Entity.getFormattedValue() added
  Property.valueClass changed to int and renamed to type, uses java.sql.Types values
  Entity.setValue() overloaded with a validateType parameter
  Property.Event renamed to ValueChangeEvent and moved to common.model.valuemap
  Property.Listener renamed to ValueChangeListener and moved to common.model.valuemap
  ChangeValueMap... classes renamed to ValueChangeMap...
  CallLogger renamed to MethodLogger
  AbstractValueMapLink.isModelPropertyValueNull() renamed to isModelValueNull()